# PhasmoTimer

./: CMakeLists.txt  CMakePresets.json  PhasmoTimer.aps  PhasmoTimer.rc  PhasmoTimer.sln  PhasmoTimer.vcxproj  PhasmoTimer.vcxproj.filters  README.md  config.cpp  config.h  font_comicz.h  foregroundtracker.cpp  foregroundtracker.h  gui.cpp  gui.h  imgui_wrappers.cpp  imgui_wrappers.h  input.cpp  main.cpp  render.cpp  render.h  resource.h  timer.cpp  timer.h  tools.cpp  tools.h  updater.cpp  updater.h  version.h
src/: config.cpp  config.h  dwm.cpp  dwm.h  fonts.cpp  fonts.h  foregroundtracker.cpp  foregroundtracker.h  gui.cpp  gui.h  hud_bar.cpp  hud_bar.h  imgui_wrappers.cpp  imgui_wrappers.h  input.cpp  input.h  lockfreequeue.hpp  logo.h  main.cpp  render.cpp  render.h  snap_window.cpp  snap_window.h  stamina.cpp  stamina.h  timer.cpp  timer.h  tools.cpp  tools.h  updater.cpp  version.h
